--- a/test-site.html
+++ b/test-site.html
@@ -191,6 +191,7 @@
                     
                     .widget-btn:hover {
                         background-color: ${theme.secondary_color || '#005a8b'};
+                        color: ${theme.primary_color || '#007cba'};
                         transform: translateY(-1px);
                     }
                     
