--- a/test-site.html
+++ b/test-site.html
@@ -193,6 +193,7 @@
                         background-color: ${theme.secondary_color || '#005a8b'};
                         color: ${theme.primary_color || '#007cba'};
                         transform: translateY(-1px);
+                        border: 1px solid ${theme.primary_color || '#007cba'};
                     }
                     
                     .widget-btn svg {
